--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-House-of-Mirth_284
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Wharton, Edith
@@ -46,6 +49,8 @@ description: "The House of Mirth (1905), a novel by Edith Wharton (1862–1937),
   \ for two generations. They include F. Scott Fitzgerald (The Great Gatsby),Sinclair\
   \ Lewis (Main Street),John O'Hara (Appointment in Samarra), and Louis Auchincloss\
   \ (The House of Five Talents).\n\n\n From Wikipedia (CC BY-SA)."
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/284#The-House-of-Mirth
 gutenberg_bookshelf: Bestsellers, American, 1895-1923
 gutenberg_issued: '1995-06-01'
 gutenberg_type: Text
